deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
 name: nginx-deployment
 namespace: nginx-namespace
spec:
 replicas: 2
 selector: 
   matchLabels:
     app: nginx-dep-pod
 template:
   metadata:
      labels: 
        app: nginx-dep-pod
   spec:
     containers:
     - name: nginx-container
       image: nginx:latest
       ports:
       - containerPort: 80
