service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: nginx-namespace
spec:
  selector: 
    app: nginx-dep
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
